--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,10 +19,11 @@ log = "0.4"
 env_logger = "0.7.1"
 clap = "2.33.0"
 serialport = "3.3.0"
-rlua = { version = "0.17.0", default-features=false, features = ["system-lua"] }
 libloading = "0.5.2"
 libc = "0.2"
-    
+rand = "0.7.2"
+rlua = "0.17.0"
+
 
 [build-dependencies]
 protoc-rust = "2.0"
