Add info to cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,12 @@
 [package]
 name = "rics"
+description = "Remote Inter-Connected Streams - datastream and bus routing"
 version = "0.2.0"
+homepage = "https://github.com/gsou/ricsctl"
 authors = ["Skami"]
 license = "MIT"
 edition = "2018"
+readme = "README.md"
 
 [lib]
 name = "rics"
