--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,3 +32,15 @@ socketcan = "1.7.0"
 
 [build-dependencies]
 protoc-rust = "2.0"
+
+[dependencies.gtk]
+version = "0.9.0"
+features = ["v3_16"]
+
+[dependencies.gio]
+version = ""
+features = ["v2_44"]
+
+[dependencies.glib]
+version = ""
+features = ["v2_44"]
