--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ libloading = "0.5.2"
 libc = "0.2"
 rand = "0.7.2"
 rlua = { git = "https://github.com/gsou/rlua.git" }
+csv = "1.1"
 
 [target.'cfg(unix)'.dependencies]
 socketcan = "1.7.0"
