--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,7 @@ serialport = "3.3.0"
 libloading = "0.5.2"
 libc = "0.2"
 rand = "0.7.2"
-rlua = { version="0.17.0", features = ["system-lua"], default-features = false, optional = true }
+rlua = { version="0.17.0", optional = true }
 csv = "1.1"
 chrono = "0.4"
 
@@ -42,16 +42,16 @@ socketcan = "1.7.0"
 # protoc-rust = "2.0"
 
 [dependencies.gtk]
-version = "0.9.0"
+version = "0.9.2"
 features = ["v3_16"]
 optional = true
 
 [dependencies.gio]
-version = ""
+version = "0.9.1"
 features = ["v2_44"]
 optional = true
 
 [dependencies.glib]
-version = ""
+version = "0.10.3"
 features = ["v2_44"]
 optional = true
